# pypassport

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/hooks/: session-start.sh
ePassportViewer/: README.md  pyproject.toml
ePassportViewer/src/epassportviewer/: app.py  attacks.py  custom.py  log.py  menu.py  viewer.py
ePassportViewer/src/epassportviewer/resources/gadgets/: placeholder.py
epassportviewer/src/epassportviewer/: __main__.py  analyze.py  apdu_format.py  app.py  attacks.py  comparer.py  custom.py  decoder.py  forge.py  hexdump.py  intercept.py  log.py  menu.py  sequencer.py  traffic.py  viewer.py
epassportviewer/src/epassportviewer/resources/gadgets/: placeholder.py
epassportviewer/tests/: conftest.py  test_comparer.py  test_forge.py  test_gui_imports.py  test_log_handler.py  test_sequencer.py
pypassport/: README  README.md  apdu.py  asn1.py  epassport.py  fingerprint.py  hexfunctions.py  iso19794.py  iso7816.py  iso9797.py  openssl.py  pyproject.toml  reader.py  requirements.txt  singleton.py  tlvparser.py
pypassport/attacks/: aaTraceability.py  macTraceability.py  signEverything.py
pypassport/doc9303/: activeauthentication.py  bac.py  converter.py  datagroup.py  mrz.py  passiveauthentication.py  securemessaging.py
pypassport/genpassport/: datagroupcreation.py
pypassport/src/pypassport/: __init__.py  apdu_history.py  asn1.py  ca_manager.py  camanager.py  der_object_identifier.py  derobjectidentifier.py  epassport.py  fingerprint.py  hex_utils.py  hexfunctions.py  interceptor.py  iso19794.py  iso7816.py  iso9797.py  logger.py  openssl.py  pa_crypto.py  pki.py  reader.py  singleton.py  tlv_parser.py  tlvparser.py  utils.py
pypassport/src/pypassport/attacks/: __init__.py  aaTraceability.py  aa_traceability.py  active_authentication_traceability.py  bruteForce.py  brute_force.py  errorFingerprinting.py  error_fingerprinting.py  macTraceability.py  mac_traceability.py  signEverything.py  sign_everything.py
pypassport/src/pypassport/doc9303/: access_control.py  active_authentication.py  activeauthentication.py  aes_secure_messaging.py  bac.py  card_access.py  converter.py  data_group.py  datagroup.py  mrz.py  pace.py  passive_authentication.py  passiveauthentication.py  secure_messaging.py  securemessaging.py  security_info.py  tagconverter.py
pypassport/tests/: conftest.py  test_access_control.py  test_apdu_history.py  test_apdu_history_serialisation.py  test_attacks_brute_force.py  test_attacks_error_fingerprinting.py  test_attacks_imports.py  test_attacks_mac_traceability.py  test_card_access.py  test_dg15.py  test_interceptor.py  test_pa_crypto.py  test_pace.py  test_security_info.py  test_transport.py  test_wire_recording.py
