[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epassportviewer"
version = "2.0.0"
description = "Desktop GUI application for reading and analysing electronic passports (ePassports)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Beaujeant", email = "antonin.beaujeant@gmail.com" },
]
keywords = ["passport", "epassport", "nfc", "rfid", "smartcard", "gui", "tkinter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pypassport",
    "Pillow>=10.3.0",
    "pycryptodome>=3.20.0",
]

[project.scripts]
epassportviewer = "epassportviewer.__main__:main"

[project.urls]
Homepage = "https://github.com/beaujeant/ePassportViewer"
Repository = "https://github.com/beaujeant/ePassportViewer"

[tool.uv.sources]
pypassport = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
epassportviewer = ["resources/img/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src"]
